@@ -24,14 +24,14 @@ use SeleniumClient\WebElement;
  */
 class TagManagerPage extends AdminManagerPage
 {
-  	/**
+	/**
 	 * XPath string used to uniquely identify this page
 	 *
 	 * @var    string
 	 * @since  3.0
 	 */
-  	protected $waitForXpath =  "//ul/li/a[@href='index.php?option=com_tags']";
-	
+	protected $waitForXpath =  "//ul/li/a[@href='index.php?option=com_tags']";
+
 	/**
 	 * URL used to uniquely identify this page
 	 *
@@ -39,7 +39,7 @@ class TagManagerPage extends AdminManagerPage
 	 * @since  3.0
 	 */
 	protected $url = 'administrator/index.php?option=com_tags';
-	
+
 	/**
 	 * Array of filter id values for this page
 	 *
@@ -51,7 +51,7 @@ class TagManagerPage extends AdminManagerPage
 			'Select Access' => 'filter_access',
 			'Select Language' => 'filter_language',
 			);
-	
+
 	/**
 	 * Array of toolbar id values for this page
 	 *
@@ -71,32 +71,36 @@ class TagManagerPage extends AdminManagerPage
 			'Options' => 'toolbar-options',
 			'Help' => 'toolbar-help',
 			);
-			
+
 	/**
 	 * Add a new Tag item in the Tag Manager: Component screen.
 	 *
-	 * @param string   $title          Test Tag Name
-	 * 
-	 * 
+	 * @param string   $name          Test Tag Name
+	 *
+	 * @param string   $caption 	  Caption of the test Image
+	 *
+	 * @param string   $alt			  Alternative Caption for the Image
+	 *
+	 * @param string   $float		  Position of the Image of the tag
+	 *
 	 * @return  TagManagerPage
 	 */
-	public function addTag($name='Test Tag')
+	public function addTag($name='Test Tag', $caption='sample', $alt='Sample_Alt', $float='Use Global')
 	{
-		$new_name = $name . rand(1,100);
+		$new_name = $name;
 		$login = "testing";
-		//echo $new_name; 
 		$this->clickButton('toolbar-new');
 		$tagEditPage = $this->test->getPageObject('TagEditPage');
-		$tagEditPage->setFieldValues(array('Title' => $new_name));
+		$tagEditPage->setFieldValues(array('Title' => $name, 'Caption' => $caption, 'Alt'=>$alt,'Float'=>$float));
 		$tagEditPage->clickButton('toolbar-save');
 		$this->test->getPageObject('TagManagerPage');
 	}
-	
+
 	/**
 	 * Edit a Tag item in the Tag Manager: Tag Items screen.
 	 *
 	 * @param string   $name	   Tag Title field
-	 * @param array    $fields         associative array of fields in the form label => value.
+	 * @param array    $fields     associative array of fields in the form label => value.
 	 *
 	 * @return  void
 	 */
@@ -110,5 +114,52 @@ class TagManagerPage extends AdminManagerPage
 		$this->searchFor();
 	}
 
-	
+	/**
+	 * Get state  of a Tag item in the Tag Manager: Tag Items screen.
+	 *
+	 * @param string   $name	   Tag Title field
+	 *
+	 * @return  State of the Tag //Published or Unpublished
+	 */
+	public function getState($name)
+	{
+		$result = false;
+		$row = $this->getRowNumber($name);
+		$text = $this->driver->findElement(By::xPath("//tbody/tr[" . $row . "]/td[3]/a"))->getAttribute(@onclick);
+		if (strpos($text, 'tags.unpublish') > 0)
+		{
+			$result = 'published';
+		}
+		if (strpos($text, 'tags.publish') > 0)
+		{
+			$result = 'unpublished';
+		}
+		return $result;
+	}
+
+	/**
+	 * Change state of a Tag item in the Tag Manager: Tag Items screen.
+	 *
+	 * @param string   $name	   Tag Title field
+	 * @param string   $state      State of the Tag
+	 *
+	 * @return  void
+	 */
+	public function changeTagState($name, $state = 'published')
+	{
+		$this->searchFor($name);
+		$this->checkAll();
+		if (strtolower($state) == 'published')
+		{
+			$this->clickButton('toolbar-publish');
+			$this->driver->waitForElementUntilIsPresent(By::xPath($this->waitForXpath));
+		}
+		elseif (strtolower($state) == 'unpublished')
+		{
+			$this->clickButton('toolbar-unpublish');
+			$this->driver->waitForElementUntilIsPresent(By::xPath($this->waitForXpath));
+		}
+		$this->searchFor();
+	}
+
 }
